<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_adrc_ctrl</name>
  <version>0.1.0</version>
  <description>PX4 ROS 2 ADRC controller (position + attitude) using Simulink-generated MBD code and direct actuator output.</description>

  <maintainer email="nanwan2004@126.com">nanwan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
